[project]
name = "backend-picpay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.8",
    "logging>=0.4.9.6",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "taskipy>=1.14.1",
]
